[gd_scene load_steps=19 format=3 uid="uid://dpgjc6n5l2kxx"]

[ext_resource type="Texture2D" uid="uid://d0qs4scq0b7my" path="res://pictures/Background.png" id="1_lti8b"]
[ext_resource type="Script" uid="uid://baue6j7tdsn08" path="res://menu.gd" id="1_ytr4m"]
[ext_resource type="FontFile" uid="uid://ccprvc1rlutw0" path="res://BoldPixels.ttf" id="2_ouk20"]
[ext_resource type="Texture2D" uid="uid://doc2h1jnmlw5" path="res://pictures/Player Default.png" id="3_mae5d"]
[ext_resource type="Texture2D" uid="uid://bjap5cr25suua" path="res://pictures/Player Blue.png" id="5_l48gv"]
[ext_resource type="AudioStream" uid="uid://cgyjhge7nuw5l" path="res://Audio/Game Music 5.mp3" id="6_l48gv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy44"]
bg_color = Color(0.7162962, 0.71629626, 0.7162961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 100
corner_radius_bottom_right = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytr4m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l48gv"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ecwwl"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mae5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hy44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecwwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kk3ma"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nrnbx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqepy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1wq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwrpx"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytr4m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1753.375, 1199)
scale = Vector2(12.813107, 16.190475)
texture = ExtResource("1_lti8b")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 68.0
offset_right = 1655.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 150
text = " Enemy Slash "

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 838.0
offset_top = 716.0
offset_right = 2752.0
offset_bottom = 1121.3334
scale = Vector2(0.3600003, 0.3600003)
focus_mode = 0
theme_override_colors/font_color = Color(0.41981265, 0.4198134, 0.41981277, 1)
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 300
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "  ▶️  Start   "

[node name="lg" type="Button" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 313.0
offset_right = 1025.0
offset_bottom = 422.0
scale = Vector2(2.0799992, 2.0799992)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ytr4m")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_l48gv")
theme_override_styles/pressed = SubResource("StyleBoxLine_ecwwl")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxLine_mae5d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ecwwl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kk3ma")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nrnbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iqepy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_h1wq0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwrpx")
icon = ExtResource("3_mae5d")

[node name="dg" type="Button" parent="."]
layout_mode = 0
offset_left = 1254.0
offset_top = 297.99997
offset_right = 1362.0
offset_bottom = 406.99997
scale = Vector2(2.2799993, 2.2799993)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ytr4m")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_l48gv")
theme_override_styles/pressed = SubResource("StyleBoxLine_ecwwl")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxLine_mae5d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ecwwl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kk3ma")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nrnbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iqepy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_h1wq0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwrpx")
icon = ExtResource("5_l48gv")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 932.0
offset_top = 549.0
offset_right = 1454.0
offset_bottom = 620.0
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 70
text = "Select your skin."

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(276, 0)
stream = ExtResource("6_l48gv")
autoplay = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="lg" to="." method="_on_lg_pressed"]
[connection signal="pressed" from="dg" to="." method="_on_dg_pressed"]
